Fixed modal z-index

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -48,6 +48,7 @@
 
     .modal {
       position: fixed;
+      z-index: 10;
       display: none;
       place-content: center;
       background-color: rgb(0 0 0 / 50%);
